# truba

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp
